# mini-workflow-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mock-server/: Dockerfile  README.md  docker-compose.yml  mock_server.py
src/: __init__.py  app.py  bootstrap.py  main.py
src/adapters/: fake_ai.py  mock_api.py  openai.py  run_store.py
src/api/: routes.py  schemas.py
src/domain/: errors.py  workflow.py
src/engine/: executor.py  input_mapping.py  loader.py  ports.py  registries.py  validator.py
src/nodes/: llm.py  llm_schemas.py  prompts.py  tool_schemas.py  tools.py
src/workflow_engine/: __init__.py  api.py  app.py  bootstrap.py  config.py  domain.py  executor.py  input_mapping.py  llm.py  main.py  mock_api_client.py  ports.py  registries.py  retry.py  store.py  tools.py  workflow_loader.py  workflow_validator.py
tests/: conftest.py  test_ai.py  test_ai_registry.py  test_api.py  test_approval_timer.py  test_executor.py  test_fake_ai.py  test_idempotency.py  test_input_mapping.py  test_llm.py  test_llm_tasks.py  test_loader.py  test_mock_api_adapter.py  test_mock_api_client.py  test_mock_server_adapter.py  test_openai_adapter.py  test_prompts.py  test_retry.py  test_run_store.py  test_store.py  test_tools.py  test_validator.py  test_workflow_validator.py
workflow_engine/: bootstrap.py  main.py
workflow_engine/adapters/: __init__.py  fake_ai.py  mock_api.py
workflow_engine/domain/: errors.py
workflow_engine/engine/: __init__.py  executor.py  ports.py  (+2 more)
workflows/: customer_support_auto_reply.yaml
(+28 files in other folders)
