[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "cox-wave-workflow-engine"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.0",
  "pydantic==2.9.0",
  "pydantic-settings==2.6.1",
  "httpx==0.27.2",
  "PyYAML==6.0.2",
  "openai==1.59.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "respx==0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
